<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="50dp">

    <!-- Etiqueta Sección -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/app_seccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Spinner Sección -->
    <Spinner
        android:id="@+id/spinseccion"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/seccion"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Etiqueta Asignatura -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/app_area"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- Spinner Asignatura -->
    <Spinner
        android:id="@+id/spinarea"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/asignaturas"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinseccion" />

    <!-- EditText Tema -->
    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="197dp"
        android:ems="10"
        android:hint="@string/app_tema"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <!-- Botón Registrar -->
    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_clase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <!-- Botón Listar -->
    <Button
        android:id="@+id/btnlistar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregistrar" />

</androidx.constraintlayout.widget.ConstraintLayout>